# vivarium

./: .gitignore  ARCHITECTURE.md  ASF.md  ASSUMPTIONS.md  CLAUDE.md  CONSOLIDATION-STATUS.md  Cargo.toml  Checkpoints.md  DECISIONS.decision-log.udon  DESIGN-MATERIAL.md  DESIGN-REDUX.md  DESIGN-SYSTEMS.md  DESIGN.md  ETHICS.md  FORMAT.md  LEXICON.md  LEXICON.udon  ORIENTATION.md  PHASES.md  README.md  SUPERSEDED.md  TODO.md  VIVARIA-DECLARATIVE-FRONTIER.md  VIVARIA-DEFINITIONS.md  clippy.toml  core-segment-candidates-2026-07-14.md  feedback-from-asf.md  tmp.md  tmptmp.md
.archive/: ASF.md  PHASES.md  README.md  SUPERSEDED.md  VIVARIA-DECLARATIVE-FRONTIER.md  architecture-migration-2026-07-03.md  universal-biological-rhythms.md
.super-archive/: MANIFEST.md  README.md
.super-archive/from-architecture/: ARCHITECTURE.md
.super-archive/from-archive/: CLAUDE.md  HANDOFF.md  PHASES.md  TODO.md  lexicon-notes-and-scratch.md  memory-surfaced-2026-07-13.md
.super-archive/from-design/: DESIGN-MATERIAL.md  DESIGN-REDUX.md  DESIGN-SYSTEMS.md  DESIGN-pre-pointer-shell-2026-07-23.md  DESIGN.md  NOMOS-CONTRACT.md
.super-archive/from-doc/: toolchain.md
.super-archive/from-msc/: session-2026-07-10-mechanics.md
.super-archive/from-plan/: abyssal-parity-plan.md  builder-explorer-decoupling.md  framework-to-status-quo.md  regula-conformance-design.md  vivium-operational-workflow.md  water-parallelism.md
.super-archive/from-theory/: discretisation-and-information.md  multiscale-methods.md  multiscale-seams.md
archive/: README.md
archive/bevy-iso/: Cargo.toml  SPEC.md
archive/bevy-voxel/: Cargo.toml
archive/godot-voxel/: README.md  fetch-voxel-addon.sh  generator.gd  main.gd  navigator.gd  player.gd  project.godot  vivarium.gdextension  vivarium.gdextension.uid
archive/iso-tiles/: Cargo.toml  README.md
archive/iso-tiles/src/: frame.rs  iso.rs  main.rs  tile.rs
archive/iso-voxels/: Cargo.toml  README.md
archive/iso-voxels/src/: main.rs
archive/vivarium-godot/: Cargo.toml
archive/vivarium-godot/src/: lib.rs
audits/: 2026-07-21-de-novo-project-audit-b.md  2026-07-21-de-novo-project-audit.md  DISPOSITION-2026-07-21-de-novo-a.md  DISPOSITION-2026-07-21-segment-floor.md  README.md
core/: OUTLINE.md
core/src/: def-in-vivia.md  def-nomos.md  def-vivium.md  detail-abyssal-parity-build.md  detail-builder-daemon.md  detail-drainage-dependency-planning.md  detail-epistemics-toolchain.md  detail-fvm-control-volume.md  detail-info-theoretic-discretisation.md  detail-nomos-defect-anatomy.md  detail-phenomena-systems-map.md  detail-regula-design.md  detail-seam-precedents.md  detail-structure-scheme-map.md  detail-vivium-lifecycle.md  detail-water-parallelism.md  disc-aat-vivarium-object-map.md  disc-algorithms-disguise-physics.md  disc-check-the-ladder.md  disc-open-problem-census.md  disc-prime-question.md  disc-unlawfulness-budget.md  disc-vivarium-purpose.md  form-add-system-contract.md  form-builder-admission.md  form-cellid-chunk-patch.md  form-column-control-volume.md  form-complete-content-addressed-key.md  form-core-view-wall.md  form-declared-structure-tradeoff.md  form-depend-by-key-never-latest.md  form-derived-sea-level.md  form-engine-bevy.md  form-face-flux-register.md  form-fidelity-invariant.md  form-fidelity-ladder.md  form-flux-web.md  form-grid-equiangular-staggered.md  form-in-vivia-citation.md  form-kernel-imperative-boundary.md  (+40 more)
crates/vivarium-app/: Cargo.toml
crates/vivarium-app/src/: main.rs
crates/vivarium-core/: Cargo.toml
crates/vivarium-core/examples/: erosion_preview.rs  erosion_terrain.rs  terrain_preview.rs  water_preview.rs  worldgen_time.rs
crates/vivarium-core/src/: geo.rs  hydro.rs  lib.rs  voxel.rs
crates/vivarium-godot/: Cargo.toml
crates/vivarium-godot/src/: lib.rs
crates/vivarium-world/: Cargo.toml
crates/vivarium-world/examples/: armor_regimes.rs  budget_probe.rs  channel_profile.rs  erosion_preview.rs  float_probe.rs  globe_ascii.rs  grid_lab.rs  hypsometry.rs  redteam_probe.rs  scan_land.rs  sea_level_probe.rs  seam_ridge.rs  source_incision.rs  spike_probe.rs  stencil_bench.rs  store_explore.rs  topo.rs  velocity_histogram.rs
crates/vivarium-world/examples/curl_probe/: curl.rs  flow.rs  main.rs
crates/vivarium-world/examples/grid_lab/: flow.rs  grids.rs  healpix.rs  icosa.rs  main.rs  mesh.rs  probes.rs
crates/vivarium-world/examples/null_space/: draw.rs  linalg.rs  main.rs  ops.rs  water_op.rs
crates/vivarium-world/examples/router_lab/: fan.rs  flow.rs  grids.rs  main.rs  sca.rs
crates/vivarium-world/examples/water_structures/: kernel.rs  main.rs
crates/vivarium-world/src/: audit.rs  chunk.rs  climate.rs  column.rs  erosion.rs  flux.rs  gen.rs  globe.rs  hydrosphere.rs  lib.rs  material.rs  measure.rs  noise.rs  nomotheke.rs  ordinum.rs  planet.rs  quantity.rs  query.rs  sample.rs  sea_level.rs  spec.rs  sphere.rs  store.rs  time.rs  uplift.rs  water.rs
doc/: ARCHITECTURE.md  PHASES.md  PROCESS.udon  toolchain.md
doc/design/: DESIGN-MATERIAL.md  DESIGN-REDUX.md  DESIGN-SYSTEMS.md  DESIGN.md  NOMOS-CONTRACT.md
doc/plan/: abyssal-parity-plan.md  builder-explorer-decoupling.md  framework-to-status-quo.md  regula-conformance-design.md  vivium-operational-workflow.md  water-parallelism.md
doc/theory/: discretisation-and-information.md  multiscale-methods.md  multiscale-seams.md
msc/: claim-channel-cleanup-2026-07-23.md  promotion-mine-2026-07-23-continuity.md
msc/agent-briefs/: 2026-07-23-archive-residual-adjudication.md  README.md  (+8 more)
msc/spike-wavelet-store/: Cargo.toml  RUN.txt  lit-notes.md
msc/spike-wavelet-store/src/: area.rs  main.rs  mra.rs  probes.rs
ref/: .gitignore  architecture-audit.md
spikes/: FINDINGS.md
spikes/globe/: Cargo.toml
spikes/globe/src/: main.rs
spikes/slabs/: Cargo.toml
spikes/slabs/src/: main.rs
spikes/tilemap/: Cargo.toml
spikes/tilemap/src/: main.rs
spikes/topdown/: Cargo.toml
spikes/topdown/src/: main.rs
spikes/worldview/: Cargo.toml
spikes/worldview/src/: main.rs
tabularium/: README.md  tellus.ordinum.udon  terrestris.ordinum.udon
(+129 files in other folders)
