# Workspace root.
#
# The split below is the load-bearing architectural decision (DESIGN.md §"core
# knows nothing about rendering"): `vivarium-core` is the simulation and has NO
# rendering dependency; `vivarium-app` is one *view* over it. Future views — a
# headless trajectory logger, a logozoetic (language) interface an agent plays
# through — are peers of `vivarium-app`, never children of it. Keep that wall
# intact: if `vivarium-core` ever gains a `bevy` dependency, something has gone
# wrong.
[workspace]
resolver = "2"
# One core, many views (DESIGN.md): `vivarium-core` (the sim) + `vivarium-world`
# (the clean-room frame it will migrate onto) + views. `spikes/slabs` is the
# current state-of-the-art exploration view (2026-07-01) and the only live spike;
# the rest were archived as superseded — see `spikes/FINDINGS.md` and `ORIENTATION.md`.
members = ["crates/vivarium-core", "crates/vivarium-world", "crates/vivarium-app", "spikes/slabs", "spikes/worldview"]
# Everything under archive/ is out of the build. (Excluded so cargo never tries to
# resolve their `workspace = true` inheritances.)
exclude = ["archive/godot-voxel", "archive/iso-tiles", "archive/vivarium-godot", "archive/bevy-voxel", "archive/bevy-iso", "archive/iso-voxels", "archive/topdown", "archive/tilemap"]

[workspace.package]
edition = "2021"
license = "MIT"

# Bevy is heavy to compile from scratch. These profile tweaks make iteration
# bearable without sacrificing release perf. (Standard Bevy guidance.)
[profile.dev]
opt-level = 1          # our own crates: light opt, fast rebuilds

[profile.dev.package."*"]
opt-level = 3          # dependencies (Bevy et al.): optimized, compiled once
