# Workspace root.
#
# Core/view wall — claim home #form-core-view-wall: the world frame has NO
# rendering dependency; views are peers. Live frame: vivarium-world. Older
# vivarium-core is migration residue. If vivarium-world gains a bevy dependency,
# something has gone wrong.
[workspace]
resolver = "2"
# vivarium-world (frame) + vivarium-core (legacy) + views. Live exploration views:
# spikes/{globe,worldview,slabs}. Superseded engine spikes: archive/ — see
# spikes/FINDINGS.md. Claim outline: core/OUTLINE.md.
members = ["crates/vivarium-core", "crates/vivarium-world", "crates/vivarium-app", "spikes/slabs", "spikes/worldview", "spikes/globe"]
# Everything under archive/ is out of the build. (Excluded so cargo never tries to
# resolve their `workspace = true` inheritances.)
exclude = ["archive/godot-voxel", "archive/iso-tiles", "archive/vivarium-godot", "archive/bevy-voxel", "archive/bevy-iso", "archive/iso-voxels", "archive/topdown", "archive/tilemap"]

[workspace.package]
edition = "2021"
license = "MIT"

# Bevy is heavy to compile from scratch. These profile tweaks make iteration
# bearable without sacrificing release perf. (Standard Bevy guidance.)
[profile.dev]
opt-level = 1          # our own crates: light opt, fast rebuilds

[profile.dev.package."*"]
opt-level = 3          # dependencies (Bevy et al.): optimized, compiled once
