# vivarium-iso-tiles — the memoized-tile isometric navigator spike (see SPEC.md).
#
# A faithful reconstruction of the ~2010 `neworld` Flash engine's secret: per-cell
# appearance is a pure function of a small discrete key, memoized once, composited
# by cheap blits. Bevy is used only for a window, a fullscreen framebuffer sprite,
# input, and a text HUD — the rendering itself is our own software rasteriser +
# compositor, exactly as neworld blitted into a BitmapData. Depends on the core;
# the core never depends on it.
[package]
name = "vivarium-iso-tiles"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy = "0.18"
vivarium-core = { path = "../../crates/vivarium-core" }
