[package]
name = "vivarium-app"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
vivarium-core = { path = "../vivarium-core" }

# One *view* over the simulation. The dependency arrow points this way on
# purpose: the app knows about the core; the core knows nothing about the app.
#
# `default-features = false` + an explicit feature list keeps the first compile
# (and every clean rebuild) from dragging in 3D, glTF, and other subsystems this
# 2D debug view will never touch. Add features back as real needs appear.
[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    "bevy_winit",        # windowing
    "bevy_window",
    "bevy_render",       # GPU rendering
    "bevy_core_pipeline",
    "bevy_sprite",       # 2D sprites — our debug rectangles
    "x11",               # Linux fallback; harmless on macOS
    "wayland",
    "multi_threaded",
]
