[package]
name = "vivarium-app"
version = "0.0.0"
edition.workspace = true
license.workspace = true

# `bevy` runs with full default features on purpose. An earlier version trimmed
# them to shave compile time, but the trimmed set silently dropped `bevy_log`
# (no startup diagnostics) and broke gizmo rendering — a black window with no
# output. For a recreational project, "it works and tells you what it's doing"
# beats a faster clean rebuild. Trim again only with a verified reason, and test
# the window after each removal.
#
# The dependency arrow points one way on purpose: the app knows about the core;
# the core knows nothing about the app.
[dependencies]
vivarium-core = { path = "../vivarium-core" }
bevy = "0.18"
