# vivarium-globe — the planet-scale view over the store/query frame: spin the
# globe, zoom, and see the landmasses the fBm spine puts above water (the
# Phase-2 "smallest-first visible win", doc/plan/abyssal-parity-plan.md).
# Depends on vivarium-world ONLY (the core/view wall) and holds no world state:
# every elevation on screen arrived through query::spine_tile via the Store.
[package]
name = "vivarium-globe"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy = "0.18"
vivarium-world = { path = "../../crates/vivarium-world" }
