# vivarium-tilemap — top-down contour map of the core's geology (see src/main.rs).
#
# Geometry first: vivarium's continuous, erosion-carved terrain quantized into
# discrete height levels, with the cliffs drawn as marching-squares contour lines
# (orthogonal + 45° chamfers) over flat material bands. The painted CLIFFVEG art is
# a later swap onto these segments. Depends on the core only.
[package]
name = "vivarium-tilemap"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy = "0.18"
vivarium-core = { path = "../../crates/vivarium-core" }
