# vivarium-worldview — the first view over the clean-room frame (vivarium-world),
# depending on it ONLY (the core/view wall: no vivarium-core here). A survey
# instrument: sample a cube-face region into field patches (sample::sample_surface),
# render as the proven ortho point-mesh (idioms carried from spikes/slabs), and
# expose the fidelity dials — [ ] changes the sampling level live and the HUD shows
# generation cost, which is the instrument for watching memoization land later.
[package]
name = "vivarium-worldview"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy = "0.18"
vivarium-world = { path = "../../crates/vivarium-world" }
