# vivarium-worldview — Bevy peer view over vivarium-world only (no reverse edge).
# Default: observe-only prior/sample ( #form-core-view-wall FE(4) ).
# Opt-in hybrid evolution: VIVARIUM_ALLOW_VIEW_EVOLUTION=1 (physics testbench debt).
[package]
name = "vivarium-worldview"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy = "0.18"
vivarium-world = { path = "../../crates/vivarium-world" }
